--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,1 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-{{welcome-page}}
-{{!-- Feel free to remove this! --}}
-
-{{outlet}}
+{{#each model as |timeprint|}}<h1>{{timeprint}}</h1>{{/each}}
